# P3

./: .gitignore  README.md  meson.build
pitch_db/: Readme_pitch_eval.txt
pitch_db/train/: orthographic.index
scripts/: run_get_pitch.sh
src/doxyfile/: Doxyfile.in
src/get_pitch/: .pitch_analyzer.cpp.swp  get_pitch.cpp  pitch_analyzer.cpp  pitch_analyzer.h  pitch_evaluate.cpp
src/test_fft/: test_fft.cpp
